# yggdrasil

./: .gitignore  Cargo.toml  README.md  \  config.toml  convert.py  data.csv  get_down_on_it  ik.ipynb  ik_rust.ipynb  new_motion0.json  nohup.out  push_to_nao  push_to_nao.sh  rust-toolchain.toml  rustfmt.toml  server.py  sif  sif.toml  sindri  sindri.toml  sit_down_from_stand_motion.json  stand_up_motion.json  tmp.out  train.py  visualize.ipynb  walking.ipynb  walking_engine.ipynb  walking_offsets.ipynb  walkv4.md  yggdrasil.code-workspace
crates/bifrost/: Cargo.toml  README.md
crates/bifrost/bifrost_derive/: Cargo.toml
crates/bifrost/bifrost_internal/: Cargo.toml
crates/bifrost/src/: error.rs  lib.rs
crates/bifrost/tests/: encode_decode_macro_test.rs
crates/build_manager/: Cargo.toml
crates/build_manager/src/: cargo.rs
crates/build_utils/: Cargo.toml
crates/build_utils/src/: lib.rs  version.rs
crates/control/: Cargo.toml
crates/control/src/: app.rs  cli.rs  control.rs  debug_system.rs  handle_message.rs  lib.rs  main.rs  resource.rs
crates/debug/: Cargo.toml
crates/filter/: Cargo.toml
crates/filter/examples/: ukf_pose.rs
crates/filter/src/: lib.rs
crates/game_controller/: Cargo.toml
crates/game_controller/src/: lib.rs  penalty.rs  transmit.rs
crates/heimdall/: .gitignore  Cargo.toml  README.md
crates/heimdall/benches/: rgb_conversion_bench.rs  yuyv_to_rgb_conversion.rs
crates/heimdall/examples/: capture_image.rs  hello_camera.rs
crates/heimdall/src/: camera.rs  camera_matrix.rs  device.rs  error.rs  exposure_weights.rs  lib.rs  ransac.rs  rgb_image.rs  yuv_planar_image.rs  yuyv_image.rs
crates/kinematics/: Cargo.toml
crates/kinematics/src/: inverse.rs  spaces.rs  visualization.rs
crates/localization/: Cargo.toml
crates/localization/src/: correction.rs  hypothesis.rs  odometry.rs  pose.rs
crates/ml/: Cargo.toml
crates/ml-ort/: Cargo.toml
crates/ml-ort/src/: backend.rs  commands_ext.rs  element.rs  lib.rs
crates/ml/src/: backend.rs  commands_ext.rs  element.rs  element_type.rs  error.rs  lib.rs  util.rs
crates/motion/: Cargo.toml
crates/motion/src/: energy_optimizer.rs
crates/nao/: Cargo.toml
crates/nao/src/: battery_led.rs  cycle.rs  lib.rs  lola.rs  robot_info.rs
crates/nidhogg/: Cargo.toml
crates/nidhogg/examples/: builder.rs  generic_backend.rs  hello_lola.rs
crates/nidhogg/nidhogg_derive/: Cargo.toml
crates/nidhogg/src/: lib.rs
crates/odal/: Cargo.toml
crates/odal/src/: error.rs  lib.rs  tests.rs
crates/seidr/: Cargo.toml
crates/seidr/src/: app.rs  cli.rs  connection.rs  lib.rs  main.rs  resource.rs  seidr.rs
crates/sif/: Cargo.toml
crates/sif/src/: cargo.rs  config.rs  lib.rs  main.rs
crates/simulation/: Cargo.toml  main.rs
crates/sindri/: Cargo.toml  build.rs
crates/sindri/.cargo/: config.toml
crates/sindri/src/: cargo.rs  config.rs  deploy.rs  error.rs  lib.rs  main.rs  version.rs
crates/skadi/: Cargo.toml
crates/skadi/src/: main.rs  motion_capture.rs
crates/spatial/: Cargo.toml
crates/spatial/examples/: derived.rs  local_to_world.rs
crates/spatial/spatial_derive/: Cargo.toml
crates/spatial/src/: lib.rs  space.rs  transform.rs  types.rs
crates/tasks/: Cargo.toml
crates/tasks/examples/: combinator.rs  entity.rs  resource.rs  scope.rs  spawn_blocking.rs
crates/tasks/src/: combinators.rs  conditions.rs  lib.rs
crates/tyr/: Cargo.toml  tyr.py
crates/tyr/examples/: async.rs  compute.rs  debug_view.rs  hello.rs  hello_world.rs  inspect_view.rs  inspectable.rs  modules.rs  nidhogg.rs  tracing.rs
crates/tyr/src/: data.rs  lib.rs  scheduler.rs  system.rs
crates/tyr/tyr-macros/: Cargo.toml
crates/tyr/tyr_internal/: Cargo.toml
crates/tyr/tyr_macros/: Cargo.toml  build.rs
crates/tyr/tyr_tasks/: Cargo.toml
crates/vision/: Cargo.toml
crates/vision/src/: color.rs  lib.rs  scan_grid.rs  scan_lines.rs
crates/yggdrasil_config/: Cargo.toml
crates/yggdrasil_config/src/: layout.rs  lib.rs  showtime.rs  yggdrasil.rs
tools/formation/: Cargo.toml
tools/formation/src/: main.rs
tools/re_control/: Cargo.toml  build.rs
tools/re_control/re_control_comms/: Cargo.toml
tools/re_control/src/: app.rs  cli.rs  connection.rs  control.rs  game_controller_view.rs  handle_message.rs  lib.rs  main.rs  re_control_view.rs  state.rs
yggdrasil/: Cargo.toml  motion.toml
yggdrasil/examples/: chain.rs  ml.rs  ml_task.rs  mltask.rs  modules.rs  resource.rs  startup_system.rs  system.rs  walking_engine.rs
yggdrasil/examples/behaviours/: mod.rs
yggdrasil/models/: whistle_detection.onnx
yggdrasil/src/: lib.rs  main.rs  movements.rs  schedule.rs
yggdrasil/src/async/: mod.rs  resource.rs  runtime.rs
yggdrasil/src/audio/: audio_input.rs  mod.rs  sound_manager.rs  wee_sound.rs  whistle_detection.rs
yggdrasil/src/behavior/: base.rs  behavior_config.rs  engine.rs  mod.rs  primary_state.rs  roles.rs
yggdrasil/src/behavior2/: behavior.rs  behavior_config.rs  engine.rs  state.rs
yggdrasil/src/behavior_old/: behavior_config.rs  engine.rs  mod.rs
yggdrasil/src/behaviour/: damage_prevention.rs  mod.rs  primary_state.rs  robot_primary_state.rs  roles.rs
yggdrasil/src/camera/: camera.rs  matrix.rs  mod.rs
yggdrasil/src/communication/: covert.rs  mod.rs  team.rs
yggdrasil/src/config/: example_config.rs  layout.rs  mod.rs  pregame.rs  showtime.rs  tyr.rs  walking_engine_config.rs  yggdrasil.rs  yggdrasil_config.rs
yggdrasil/src/core/: mod.rs  whistle.rs
yggdrasil/src/damage_prevention/: damage_prevention.rs  mod.rs
yggdrasil/src/debug/: message.rs  mod.rs  stream.rs
yggdrasil/src/filter/: angle_prediction.rs  audio_input.rs  button.rs  falling.rs  force_sensitive_resistor.rs  fsr.rs  imu.rs  input_audio.rs  low_pass_filter.rs  mod.rs  orientation.rs  sonar.rs
yggdrasil/src/game_controller/: mod.rs  penalty.rs  receive.rs  transmit.rs
yggdrasil/src/game_controller2/: mod.rs  receive.rs  transmit.rs
yggdrasil/src/game_phase/: mod.rs
yggdrasil/src/hearing/: mod.rs
yggdrasil/src/kinematics/: bones.rs  dimensions.rs  forward.rs  inverse.rs  mod.rs  spaces.rs  (+2 more)
(+743 files in other folders)
