[workspace]
members = ["crates/*", "tools/sindri", "tools/re_control", "yggdrasil"]
resolver = "2"

[workspace.package]
authors = ["Dutch Nao Team"]
categories = []
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.lints.rust]
# TODO: re-enable this once we have docs for everything
# missing_docs = "warn"
# TODO: replace this lint with cargo-machete, since it's broken
# https://github.com/rust-lang/rust/issues/57274
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# enable clippy lints with priority -1
# so that we can override certain ones with "allow"
all = { level = "warn", priority = -1 }
inline_always = "allow"
pedantic = { level = "warn", priority = -1 }

# these are anti-patterns in our codebase/bevy
module_name_repetitions = "allow"
needless_pass_by_value = "allow"

# this one seems broken for the `whistle_in_set` enum property
# https://github.com/rust-lang/rust-clippy/issues/13058
used_underscore_binding = "allow"

# these are not useful for our codebase, or are too noisy
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
type_complexity = "allow"

# TODO: Look into enabling these
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

[workspace.dependencies]
# root crates
yggdrasil = { path = "yggdrasil" }

# yggdrasil libraries
bifrost = { path = "crates/bifrost" }
build_utils = { path = "crates/build_utils" }
filter = { path = "crates/filter" }
heimdall = { path = "crates/heimdall" }
ml = { path = "crates/ml" }
nidhogg = { path = "crates/nidhogg" }
odal = { path = "crates/odal" }
re_control_comms = { path = "tools/re_control/re_control_comms" }
sindri = { path = "tools/sindri" }
spatial = { path = "crates/spatial" }
tasks = { path = "crates/tasks" }

# external crates
apodize = "1.0.0"
async-std = "1.13.1"
bevy = { version = "0.15.3", default-features = false, features = [
  "bevy_state",
] }
byteorder = "1.5.0"
cargo_toml = "0.20.5"
chrono = "=0.4.39"
clap = "4.5.36"
colored = "2.1.0"
cpal = "0.15.3"
dialoguer = "0.11.0"
fast-math = "0.1.1"
fast_image_resize = "5.1.3"
futures = "0.3.31"
geo = "0.29.2"
glob = "0.3.1"
home = "0.5.9"
indicatif = "0.17.8"
itertools = "0.14.0"
kira = { version = "0.9.5", default-features = false, features = [
  "cpal",
  "wav",
] }
linuxvideo = { git = "ssh://git@github.com/IntelligentRoboticsLab/linuxvideo", rev = "b8536cf4da325de79f398e70a74cee5bf426f64c" }
local-ip-address = "0.6.3"
lstsq = "0.6.0"
miette = "7.4.0"
mimalloc = "0.1.45"
nalgebra = { version = "0.33.2", features = ["convert-glam028"] }
ndarray = "0.16.1"
num = "0.4.3"
openvino = { version = "0.8.0", features = ["runtime-linking"] }
ordered-float = "4.4.0"
pathfinding = "4.11.0"
petgraph = "0.6.5"
plotters = { version = "0.3.7", default-features = false, features = [
  "bitmap_backend",
  "bitmap_encoder",
] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"

re_crash_handler = "0.22.1"
rerun = { version = "0.22.1", default-features = false, features = [
  "sdk",
  "server",
  "analytics",
  "log",
  "glam",
] }
rmp-serde = "1.1.1"
rustfft = "6.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.11.0"
socket2 = "0.5.9"
strum = { version = "0.27", features = ["derive"] }
syn = "2.0.100"
thiserror = "2.0.12"
tokio = "1.44.2"
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.11.3"
turbojpeg = "1.3.2"
vqf = { version = "0.4.1", features = ["serde"] }
