[package]
name = "yggdrasil"
description = "The yggdrasil SPL framework"
default-run = "yggdrasil"

authors.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
rerun = ["dep:rerun"]
local = []
dependency_graph = []
timings = ["dep:tracing-tracy", "bevy/trace"]

[dependencies]
# our own crates here
heimdall = { workspace = true }
odal = { workspace = true }
ml = { workspace = true }
tasks = { workspace = true }
bifrost = { workspace = true }
tyr = { workspace = true, features = ["odal"] }

# external crates here
async-std = { workspace = true }
cpal = { workspace = true }
apodize = { workspace = true }
bevy = { workspace = true, features = ["multi_threaded"] }
derive_more = { workspace = true }
enum_dispatch = { workspace = true }
fast_image_resize = { workspace = true }
fast-math = { workspace = true }
futures = { workspace = true }
geo = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
kira = { workspace = true }
linreg = { workspace = true }
lstsq = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
nalgebra = { workspace = true, features = ["serde-serialize"] }
ndarray = { workspace = true }
nidhogg = { workspace = true, features = ["lola", "bevy"] }
num = { workspace = true }
ordered-float = { workspace = true }
pathfinding = { workspace = true }
rerun = { workspace = true, optional = true }
rustfft = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-tracy = { workspace = true, optional = true }
