[package]
default-run = "yggdrasil"
description = "The yggdrasil SPL framework"
name = "yggdrasil"

authors.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
dependency_graph = []
local = []
re_control = []
timings = ["dep:tracing-tracy", "bevy/trace"]

[dependencies]
# our own crates here
bifrost = { workspace = true }
heimdall = { workspace = true }
ml = { workspace = true }
odal = { workspace = true }
re_control_comms = { workspace = true }
spatial = { workspace = true }
tasks = { workspace = true }

# external crates here
apodize = { workspace = true }
async-std = { workspace = true }
bevy = { workspace = true, features = ["multi_threaded"] }
chrono = { workspace = true }
cpal = { workspace = true }
enum_dispatch = { workspace = true }
futures = { workspace = true }
geo = { workspace = true }
itertools = { workspace = true }
kira = { workspace = true }
linreg = { workspace = true }
lstsq = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
nalgebra = { workspace = true, features = [
  "serde-serialize",
  "convert-glam029",
] }
ndarray = { workspace = true }
nidhogg = { workspace = true, features = ["lola", "bevy"] }
num = { workspace = true }
ordered-float = { workspace = true }
pathfinding = { workspace = true }
rerun = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-tracy = { workspace = true, optional = true }
vqf = { workspace = true }
