[package]
default-run = "yggdrasil"
description = "The yggdrasil SPL framework"
name = "yggdrasil"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
dependency_graph = []
local = []
timings = ["dep:tracing-tracy", "bevy/trace"]
yggdrasil_rerun = []

[dependencies]
# our own crates here
bifrost = { workspace = true }
heimdall = { workspace = true }
ml = { workspace = true }
nidhogg = { workspace = true, features = ["lola", "bevy"] }
odal = { workspace = true }
spatial = { workspace = true }
tasks = { workspace = true }
yggdrasil_rerun_comms = { workspace = true }

# external crates here
apodize = { workspace = true }
async-std = { workspace = true }
bevy = { workspace = true, features = [
  "bevy_state",
  "configurable_error_handler",
] }
chrono = { workspace = true }
cpal = { workspace = true }
fast_image_resize = { workspace = true }
filter = { version = "0.1.0", path = "../crates/filter" }
futures = { workspace = true }
geo = { workspace = true }
itertools = { workspace = true }
kira = { workspace = true }
lstsq = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
nalgebra = { workspace = true, features = [
  "serde-serialize",
  "convert-glam029",
] }
ndarray = { workspace = true }
num = { workspace = true }
ordered-float = { workspace = true }
pathfinding = { workspace = true }
rand = { workspace = true }
rerun = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-tracy = { workspace = true, optional = true }
vqf = { workspace = true }
