[package]
name = "bifrost"
authors.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bifrost_derive = { path = "bifrost_derive" }
byteorder = { workspace = true }
num = { workspace = true }
thiserror = { workspace = true }
bevy = { workspace = true, default-features = false }
