[package]
authors.workspace = true
categories.workspace = true
edition.workspace = true
name = "bifrost"
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, default-features = false }
bifrost_derive = { path = "bifrost_derive" }
byteorder = { workspace = true }
num = { workspace = true }
thiserror = { workspace = true }
