[package]
authors.workspace = true
name = "bifrost"
version.workspace = true

categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
nalgebra = ["dep:nalgebra"]

[dependencies]
bevy = { workspace = true, default-features = false }
bifrost_derive = { path = "bifrost_derive" }
byteorder = { workspace = true }
nalgebra = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"]}
thiserror = { workspace = true }
