[package]
edition = "2021"
name = "control"
version = "0.1.0"

[dependencies]
async-std = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
miette = { workspace = true }
mimalloc = { workspace = true }
re_crash_handler = { workspace = true }
re_sdk_comms = { workspace = true, features = ["server"] }
re_smart_channel = { workspace = true }
re_viewer = { workspace = true }
rerun = { workspace = true, features = ["ecolor", "clap"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "io-util",
] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
yggdrasil = { path = "../../yggdrasil" }
