[package]
name = "heimdall"
authors.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
image = { workspace = true }
linuxvideo = { workspace = true }
miette = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
turbojpeg = { workspace = true }
fast-math = { workspace = true }
bevy = { workspace = true }
