[package]
authors.workspace = true
categories.workspace = true
edition.workspace = true
name = "heimdall"
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bifrost = { workspace = true }

bevy = { workspace = true }
fast-math = { workspace = true }
fast_image_resize = { workspace = true }
itertools = { workspace = true }
linuxvideo = { workspace = true }
miette = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
turbojpeg = { workspace = true }
