[package]
name = "heimdall"
version.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bifrost = { workspace = true }

bevy = { workspace = true }
fast-math = { workspace = true }
fast_image_resize = { workspace = true }
itertools = { workspace = true }
linuxvideo = { workspace = true }
miette = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
turbojpeg = { workspace = true }
