[package]
authors.workspace = true
name = "kinematics"
version.workspace = true

categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, default-features = false }
# heimdall = { workspace = true }
# localization = { workspace = true }
debug = { workspace = true }
localization = { workspace = true }
miette = { workspace = true }
sensor = { workspace = true }
# motion = { workspace = true }
# nalgebra = { workspace = true }
# nidhogg = { workspace = true }
spatial = { workspace = true }
# re_control = { workspace = true }
# serde = { workspace = true }
# yggdrasil_config = { workspace = true }
