[package]
name = "ml-ort"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true }
fast_image_resize = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
tasks = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
