[package]
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
name = "ml-ort"
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true }
fast_image_resize = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true, default-features = false, features = [
  "download-binaries",
  "load-dynamic",
  "openvino",
] }
tasks = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
