[package]
name = "ml"
description = "Type-safe accelerated machine learning inference in Rust"

authors.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
tasks = { workspace = true }
bevy = { workspace = true }
openvino = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
miette = { workspace = true }
fast_image_resize = { workspace = true }
