[package]
description = "Type-safe accelerated machine learning inference in Rust"
name = "ml"
version.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
fast_image_resize = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
ndarray = { workspace = true }
openvino = { workspace = true }
tasks = { workspace = true }
thiserror = { workspace = true }
