[package]
authors.workspace = true
categories.workspace = true
edition.workspace = true
name = "nidhogg"
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
forward_ref_generic = "0.2.1"
rmp-serde = { version = "1.1.1", optional = true }
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.38"
miette = { version = "5.10.0" }
tracing = "0.1.37"
nidhogg_derive = { path = "nidhogg_derive" }
coppeliasim_zmq_remote_api = { git = "https://github.com/samuel-cavalcanti/rust_zmqRemoteApi", optional = true }
num = "0.4.1"
nalgebra = { version = "0.32.6", features = ["serde-serialize"] }
bevy_ecs = { version = "0.14.2", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.16"

[features]
default = ["serde", "lola", "bevy"]

serde = []
lola = ["dep:rmp-serde"]
coppelia = ["dep:coppeliasim_zmq_remote_api"]
bevy = ["dep:bevy_ecs"]
