[package]
description = "High level abstraction layer over the LoLA protocol"
name = "nidhogg"
version.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[dependencies]
bevy = { workspace = true, default-features = false, optional = true }
miette = { workspace = true }
nalgebra = { workspace = true, features = ["serde-serialize"] }
nidhogg_derive = { path = "nidhogg_derive" }
num = { workspace = true }
rmp-serde = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = ["serde", "lola", "bevy"]

bevy = ["dep:bevy"]
lola = ["dep:rmp-serde"]
serde = []
