[package]
name = "odal"
version.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
