[package]
authors.workspace = true
categories.workspace = true
edition.workspace = true
name = "odal"
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
serde = { workspace = true, features = ["derive"] }
