[package]
name = "sif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.15.3"
tokio = { version = "1.29.1", features = ["full"] }
clap = { workspace = true, features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
spinoff = "0.7.0"
futures = "0.3"
surge-ping = "0.8.0"
rand = "0.8.5"
colored = "2.0.4"
toml = "0.7.6"
serde = "1.0.171"