[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bifrost = { path = "../bifrost" }
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = {version = "0.27.2", features = ["default", "image"]}
env_logger = "0.11.3"
home = { workspace = true }
miette = { workspace = true }
nalgebra = { workspace = true }
nidhogg = { workspace = true }
rand = "0.8.5"
toml = { workspace = true }
yggdrasil = { path = "../../yggdrasil" }

[[bin]]
name = "simulation"
path = "main.rs"


