[package]
edition = "2021"
name = "sindri"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
dialoguer = { workspace = true }
home = { workspace = true }
indicatif = { workspace = true }
local-ip-address = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
ssh2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
toml = { workspace = true }
walkdir = { workspace = true }
