[package]
name = "skadi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { workspace = true }
yggdrasil = { path = "../../yggdrasil" }
tyr = { path = "../tyr" }
nidhogg = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
clearscreen = "2.0.1"
tracing-subscriber = { workspace = true }
