[package]
name = "spatial"
version.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
nalgebra = { workspace = true }
spatial_derive = { path = "spatial_derive" }
