[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[lib]
name = "tasks"

[dependencies]
async-std = { workspace = true }
bevy = { workspace = true, default-features = false, features = [
    "multi_threaded",
] }
futures = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
