[package]
name = "tasks"
version.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-std = { workspace = true }
bevy = { workspace = true, default-features = false, features = [
  "multi_threaded",
] }

[dev-dependencies]
rand = { workspace = true }
