[package]
name = "tyr"
version = "0.1.0"
edition = "2021"

[dependencies]
tyr_internal = { path = "tyr_internal" }
tyr_macros = { path = "tyr_macros" }
tyr_tasks = { path = "tyr_tasks", features = ["serde"] }

[dev-dependencies]
miette = { workspace = true }
nidhogg = { workspace = true, features = ["lola"] }
tokio = { workspace = true }
