[package]
name = "tyr"
version = "0.1.0"
edition = "2021"

[lib]
name = "tyr"

[dependencies]
tyr_internal = { path = "tyr_internal" }
tyr_macros = { path = "tyr_macros" }
tyr_tasks = { path = "tyr_tasks" }

[dev-dependencies]
itertools = { workspace = true }
miette = { workspace = true }
nidhogg = { workspace = true, features = ["lola"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true }

[features]
odal = ["tyr_tasks/odal"]
